# receipt-processing-israel

./: .env.example  .env.template  .gitattributes  .gitignore  CLAUDE.md  CONFIG.example.yaml  ICOUNT_CATEGORIES.md  README.md  RECURRING_VENDORS.example.yaml  TECHNICAL_SPEC.md  TROUBLESHOOTING.md  config.example.yaml  pyproject.toml  receipt_classifier.py  receipt_consolidator.py  receipt_extractor.py  recurring_vendors.example.yaml  requirements.txt  vat_report.py
.claude/: settings.json
.claude/skills/bimonthly-cycle/: SKILL.md
.githooks/: post-commit
config/: excel_layout.yaml
docs/: PERSONAL_INSTRUCTIONS.md  PRODUCT_REQUIREMENTS.md  TECHNICAL_SPEC.md  TROUBLESHOOTING.md  iCount-Expenses-sample.xls  personal-backup.md  product-requirements.md  technical-spec.md
docs/extraction-prompt/: 001-ICOUNT_CATEGORIES.md  README.md
docs/superpowers/plans/: 2026-07-11-bimonthly-cycle-skill.md  2026-07-17-personal-overlay-backup.md
docs/superpowers/specs/: 2026-07-11-bimonthly-cycle-skill-design.md  2026-07-17-personal-overlay-backup-design.md
prompts/: receipt_extraction_prompt.j2  receipt_extraction_schema.json
shared/: __init__.py  excel_config.py  excel_generator.py  image_handler.py  logger.py  openai_client.py  personal_config.py  receipt_checks.py
tests/: test_audit_batch.py  test_extractor_warnings.py  test_image_handler.py  test_personal_backup.py  test_personal_config.py  test_receipt_checks.py  test_receipt_consolidator.py  test_vat_report.py
tools/: audit_batch.py  personal_backup.py
